@@ -1,10 +1,11 @@
 # Created by Jevoom
 #
 # 19-Dec-2011
-#   improvements to supervisor class to add daemon log and catch errors more often
+#   Change supervisor to catch StandardError and let SystemExit fall through untouched.
+#   Add opts to log output from daemonize
 
 module Jerbil
-  Version = '0.2.14'
+  Version = '0.2.15'
   Version_Date = '19-Dec-2011'
-  Ident = 'jerbil-0.2.14 19-Dec-2011'
+  Ident = 'jerbil-0.2.15 19-Dec-2011'
 end
