@@ -1,5 +1,10 @@
 ==History
 
+jerbil-0.2.15 19-Dec-2011
+
+Change supervisor to catch StandardError and let SystemExit fall through untouched.
+Add opts to log output from daemonize
+
 jerbil-0.2.14 19-Dec-2011
 
 improvements to supervisor class to add daemon log and catch errors more often
